dashboards are correctly displaying the user and company informations

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 SECRET_KEY=your-secret-key
-DATABASE_URL=mysql://user:password@localhost/dbname
+DATABASE_URL=mysql+pymysql://root:Yon24@localhost/job_matching
