--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -63,7 +63,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+pymysql://root:11223344HHss@localhost/job_matching
+###### sqlalchemy.url = mysql+pymysql://root:11223344HHss@localhost/job_matching 
+sqlalchemy.url = mysql+pymysql://root:Yon24@localhost/job_matching
 
 
 [post_write_hooks]
