--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,9 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "jwt-decode": "^4.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
